# Sovereign-Test-Rollup

./: .dockerignore  .gitignore  CLA.md  Cargo.toml  GETTING_STARTED_WITH_CELESTIA.md  LICENSE.md  Makefile  README.md  UPGRADE.md  constants.toml  rust-toolchain.toml
.cargo/: config.toml  zepter.yaml
.github/: actionlint.yaml
.github/workflows/: cla.yml  reusable-job.yml  rust.yml  soak-test.yml
configs/celestia/: genesis.json  rollup.toml
configs/mock/: genesis-commented.json  genesis.json  genesis_without_paymaster.json  rollup-dockerized.toml  rollup.toml
crates/provers/risc0/: Cargo.toml  build.rs
crates/provers/risc0/guest-celestia/: Cargo.toml
crates/provers/risc0/guest-mock/: Cargo.toml
crates/provers/sp1/: Cargo.toml  build.rs
crates/provers/sp1/guest-celestia/: Cargo.toml
crates/provers/sp1/guest-mock/: Cargo.toml
crates/provers/sp1/src/: lib.rs
crates/rollup/: Cargo.toml  Makefile
crates/rollup/src/: da.rs  lib.rs  rollup.rs  zkvm.rs
crates/rollup/tests/: test_helpers.rs
crates/rollup/tests/bank/: mod.rs
crates/stf/: Cargo.toml  README.md  build.rs
crates/stf/src/: delegation.rs  lib.rs  runtime.rs
crates/stf/stf-declaration/: Cargo.toml
crates/stf/stf-declaration/src/: lib.rs
docs/: VERITAS_IMPLEMENTATION_GUIDE.md  VERITAS_LEARNING_SUMMARY.md
examples/: veritas-client-example.js  veritas-integration-explanation.md
examples/privy/: .env.example  README.md  package-lock.json  package.json  vite.config.ts
examples/privy/src/: App.css  App.tsx  ConnectButton.tsx  main.tsx  types.ts
examples/starter-js/: README.md  package-lock.json  package.json  run-monitor.sh  run-simulation.sh  tsconfig.json
examples/starter-js/src/: create-warp-route.js  create-warp-route.ts  index.js  index.ts  set-igp.js  set-igp.ts  veritas-monitor.js  veritas-monitor.ts  veritas-setup.js  veritas-setup.ts  veritas-simulation.js  veritas-simulation.ts  veritas-test.js  veritas-test.ts
examples/value-setter/: Cargo.toml  README.md
examples/value-setter/src/: lib.rs
examples/value-setter/tests/: test_value_setter.rs
examples/veritas-agent/: Cargo.toml
examples/veritas-agent/src/: lib.rs
examples/veritas-agent/tests/: test_agent.rs
examples/veritas-belief/: Cargo.toml
examples/veritas-belief/src/: lib.rs
examples/veritas-simulation/: README.md  monitor.mjs  package-lock.json  package.json  tsconfig.json
examples/veritas-simulation/src/: agents-simple.ts  agents.ts  beliefs-simple.ts  beliefs.ts  config.ts  index.ts  monitor-only.ts  monitor.ts  simple-client.ts  types.ts
examples/veritas-submission/: Cargo.toml
examples/veritas-submission/src/: lib.rs
integrations/: Makefile  README.md  different_ports.env  docker-compose.celestia.yml  docker-compose.postgres.yml  docker-compose.yml
integrations/celestia/: Dockerfile.bridge  Dockerfile.validator  bridge-healthcheck.sh  run-bridge.sh  run-validator.sh  validator-healthcheck.sh
integrations/hyperlane/: .env.example  .gitignore  README.md  config.json  docker-compose.yml
integrations/postgres/: servers.json
integrations/rollup/: Dockerfile.mock
scripts/: run-soak-test.sh  start_observability.sh  stop_observability.sh  update_rev.sh
scripts/soak-test/: Cargo.toml
scripts/soak-test/src/: main.rs
specs/: logs.md  veritas-test-architecture.md
test-data/keys/: minter_private_key.json  token_deployer_private_key.json  tx_signer_private_key.json
test-data/requests/: create_token.json  mint.json  register_sequencer.json  transfer.json
