[package]
name = "stf-starter"
version = { workspace = true }
edition = { workspace = true }
resolver = "2"
authors = { workspace = true }
license = { workspace = true }
homepage = "sovereign.xyz"
publish = false

[dependencies]
stf-starter-declaration = { workspace = true }

sov-rollup-interface = { workspace = true }
sov-modules-api = { workspace = true }
sov-modules-stf-blueprint = { workspace = true }
sov-capabilities = { workspace = true }
sov-kernels = { workspace = true }
sov-rollup-apis = { workspace = true, optional = true }
sov-sequencer-registry = { workspace = true }
sov-paymaster = { workspace = true }
sov-hyperlane-integration = { workspace = true }
sov-bank = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
stf-starter-declaration = { workspace = true }
sov-address = { workspace = true, features = ["evm"] }
sov-modules-api = { workspace = true }
sov-mock-zkvm = { workspace = true }
sov-mock-da = { workspace = true, optional = true }
sov-celestia-adapter = { workspace = true, optional = true }
serde_json = { workspace = true }
sov-universal-wallet = { workspace = true, features = ["serde"] }
sov-build = { workspace = true }

[features]
default = []
mock_da = ["sov-mock-da"]
celestia_da = ["sov-celestia-adapter"]
native = [
  "stf-starter-declaration/native",
  "sov-modules-api/native",
  "sov-modules-stf-blueprint/native",
  "sov-rollup-interface/native",
  "sov-capabilities/native",
  "sov-rollup-apis",
  "sov-kernels/native",
  "sov-paymaster/native",
  "sov-hyperlane-integration/native",
  "sov-sequencer-registry/native",
  "sov-bank/native",
  "sov-address/native",
  "sov-mock-da?/native",
  "sov-celestia-adapter?/native",
  "sov-mock-zkvm/native",
]

bench = [
  "stf-starter-declaration/bench",
  "sov-modules-api/bench",
  "sov-modules-stf-blueprint/bench",
  "sov-celestia-adapter?/bench",
]
