[package]
name = "sov-rollup-starter-soak-test"
version = "0.1.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["rustls-tls"] }

sov-soak-testing = { workspace = true }
sov-api-spec = { workspace = true }
sov-rollup-interface = { workspace = true, features = ["arbitrary"] }
sov-modules-rollup-blueprint = { workspace = true, features = ["native"] }
sov-test-utils = { workspace = true, features = ["arbitrary"] }
sov-risc0-adapter = { workspace = true, optional = true, features = ["arbitrary", "native"] } 
sov-sp1-adapter = { workspace = true, optional = true, features = ["arbitrary", "native"] }

sov-rollup-starter = { path = "../../crates/rollup/", default-features = false }

[features]
default = ["mock_da", "mock_zkvm"]
mock_da = ["sov-rollup-starter/mock_da"]
celestia_da = ["sov-rollup-starter/celestia_da"]
sp1 = ["sov-sp1-adapter", "sov-rollup-starter/sp1"]
risc0 = ["sov-risc0-adapter", "sov-rollup-starter/risc0"]
mock_zkvm = ["sov-rollup-starter/mock_zkvm"]
