[package]
name = "sp1-starter"
version = "0.3.0"
edition = "2021"
resolver = "2"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
lazy_static = { workspace = true }

[build-dependencies]
sp1-build = { version = "5.0.8", default-features = false }
sov-zkvm-utils = { workspace = true }


[features]
bench = []