[package]
name = "stf-starter-declaration"
version = { workspace = true }
edition = { workspace = true }
resolver = "2"
authors = { workspace = true }
license = { workspace = true }
homepage = "sovereign.xyz"
publish = false

[dependencies]
sov-modules-api = { workspace = true }
sov-state = { workspace = true }
sov-accounts = { workspace = true }
sov-uniqueness = { workspace = true }
sov-bank = { workspace = true }
sov-chain-state = { workspace = true }
sov-blob-storage = { workspace = true }
sov-operator-incentives = { workspace = true }
sov-prover-incentives = { workspace = true }
sov-attester-incentives = { workspace = true }
sov-sequencer-registry = { workspace = true }
sov-paymaster = { workspace = true }
sov-revenue-share = { workspace = true }
sov-modules-stf-blueprint = { workspace = true }
sov-rollup-interface = { workspace = true }
sov-capabilities = { workspace = true }
sov-kernels = { workspace = true }
sov-rollup-apis = { workspace = true, optional = true }
sov-hyperlane-integration = { workspace = true }

tracing = { workspace = true }
value-setter = { workspace = true }
strum = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
jsonrpsee = { workspace = true, features = ["http-client", "server"], optional = true }
borsh = { workspace = true, features = ["rc", "bytes"] }
clap = { workspace = true, features = ["derive"], optional = true }

[features]
default = []
native = [
	"clap",
	"jsonrpsee",
	"sov-accounts/native",
	"sov-attester-incentives/native",
	"sov-bank/native",
	"sov-capabilities/native",
	"sov-chain-state/native",
	"sov-blob-storage/native",
	"sov-modules-api/native",
	"sov-modules-stf-blueprint/native",
	"sov-uniqueness/native",
	"sov-prover-incentives/native",
	"sov-rollup-interface/native",
	"sov-state/native",
	"sov-sequencer-registry/native",
	"sov-capabilities/native",
	"sov-state/native",
	"value-setter/native",
	"sov-rollup-apis",
	"sov-kernels/native",
	"sov-paymaster/native",
	"sov-hyperlane-integration/native",
	"sov-operator-incentives/native",
	"sov-revenue-share/native"
]
bench = [
    "sov-modules-api/bench",
    "sov-modules-stf-blueprint/bench",
    "sov-state/bench"
]
