[package]
name = "sov-demo-prover-guest-celestia-risc0"
version = "0.3.0"
edition = "2021"
resolver = "2"

[workspace]

[dependencies]
anyhow = { version = "1.0.95" }

risc0-zkvm = { version = "2.1", default-features = false, features = ["std"] }
risc0-zkvm-platform = { version = "2.0" }

sov-address = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "7262365931286fb780534618d2057e83fe198870", features = ["evm"] }
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "7262365931286fb780534618d2057e83fe198870" }
sov-celestia-adapter = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "7262365931286fb780534618d2057e83fe198870" }
sov-modules-api = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "7262365931286fb780534618d2057e83fe198870" }
sov-modules-stf-blueprint = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "7262365931286fb780534618d2057e83fe198870" }
sov-risc0-adapter = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "7262365931286fb780534618d2057e83fe198870" }
sov-state = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "7262365931286fb780534618d2057e83fe198870" }
sov-mock-zkvm = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "7262365931286fb780534618d2057e83fe198870" }
sov-kernels = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "7262365931286fb780534618d2057e83fe198870" }
sov-metrics = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "7262365931286fb780534618d2057e83fe198870", optional = true }

stf-starter = { path = "../../../stf", default-features = false, features = ["celestia_da"] }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
# Corresponding release: <https://github.com/risc0/curve25519-dalek/releases/tag/curve25519-4.1.2-risczero.0>
ed25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", rev = "3dccc5b71b806f500e73829e2a5cbfe288cce2a0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }

[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

[features]
bench = [
    "sov-celestia-adapter/bench",
    "sov-risc0-adapter/bench",
    "sov-modules-api/bench",
    "sov-state/bench",
    "sov-modules-stf-blueprint/bench",
    "sov-metrics/risc0",
    "stf-starter/bench",
]
bincode = ["sov-risc0-adapter/bincode"]
