[package]
name = "sov-demo-prover-guest-celestia-sp1"
version = "0.3.0"
edition = "2021"
resolver = "2"

[workspace]

[dependencies]
anyhow = { version = "1.0.95" }

sp1-zkvm = { version = "5.0.8" }
stf-starter = { path = "../../../stf", default-features = false, features = ["celestia_da"] }

sov-address = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "feb478bdbfbc4f241a112ce854904742ce3fb96c", features = ["evm"] }
sov-rollup-interface = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "feb478bdbfbc4f241a112ce854904742ce3fb96c" }
sov-celestia-adapter = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "feb478bdbfbc4f241a112ce854904742ce3fb96c" }
sov-modules-api = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "feb478bdbfbc4f241a112ce854904742ce3fb96c" }
sov-modules-stf-blueprint = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "feb478bdbfbc4f241a112ce854904742ce3fb96c" }
sov-sp1-adapter = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "feb478bdbfbc4f241a112ce854904742ce3fb96c" }
sov-state = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "feb478bdbfbc4f241a112ce854904742ce3fb96c" }
sov-mock-zkvm = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "feb478bdbfbc4f241a112ce854904742ce3fb96c" }
sov-kernels = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "feb478bdbfbc4f241a112ce854904742ce3fb96c" }
sov-metrics = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "feb478bdbfbc4f241a112ce854904742ce3fb96c", optional = true }

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }
curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", branch = "patch-curve25519-v4.1.3" }
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", branch = "patch-v0.5.5" }

[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

[features]
bench = [
    "sov-celestia-adapter/bench",
    "sov-modules-api/bench",
    "sov-state/bench",
    "sov-modules-stf-blueprint/bench",
    "stf-starter/bench",
    "sov-metrics/sp1"
]
